--- a/graffer-graphic-recording-css/index.html
+++ b/graffer-graphic-recording-css/index.html
@@ -3,17 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSSコード表示</title>
-    <style>
-        pre {
-            background-color: #f5f5f5;
-            padding: 20px;
-            border-radius: 8px;
-            overflow-x: auto;
-            font-family: monospace;
-            line-height: 1.5;
-        }
-    </style>
+    <title>Graffer Graphic Recording CSS</title>
 </head>
 <body>
     <pre>
