--- a/graffer-graphic-recording-css/index.html
+++ b/graffer-graphic-recording-css/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/css; charset=utf-8">
     <title>Graffer Graphic Recording CSS</title>
 </head>
 <body>
